<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resources"
    android:background="@drawable/pic_1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/plasma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/co_life_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="409dp"
        android:layout_height="20dp"
        app:cardBackgroundColor="#8EB8B2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/plasma"
        android:layout_width="274dp"
        android:layout_height="61dp"
        android:layout_marginTop="292dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/plasma"
        android:textSize="24sp"
        app:backgroundTint="#8EB8B2"
        app:layout_constraintBottom_toTopOf="@+id/oxygen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/oxygen"
        android:layout_width="274dp"
        android:layout_height="61dp"
        android:layout_marginTop="376dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/oxygen"
        android:textSize="24sp"
        app:backgroundTint="#8EB8B2"
        app:layout_constraintBottom_toTopOf="@+id/blood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/blood"
        android:layout_width="274dp"
        android:layout_height="61dp"
        android:layout_marginTop="452dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/blood"
        android:textSize="24sp"
        app:backgroundTint="#8EB8B2"
        app:layout_constraintBottom_toTopOf="@+id/food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView4"
        app:layout_constraintVertical_bias="0.176" />

    <Button
        android:id="@+id/food"
        android:layout_width="274dp"
        android:layout_height="61dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/food"
        android:textSize="24sp"
        app:backgroundTint="#8EB8B2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />
</androidx.constraintlayout.widget.ConstraintLayout>